Fixed spacing

--- a/src/pages/CareerHZ/careerhz.css
+++ b/src/pages/CareerHZ/careerhz.css
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: row;
   width: auto;
-  margin: 8rem 0 4rem;
+  margin: 6rem 0 4rem;
   position: relative;
 }
 
